{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 213,
  "lineage": "bdb53776-484e-4217-ec2e-dc108fe64c56",
  "resources": [
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024daf4a5fccf9e25",
            "arn": "arn:aws:ec2:us-east-1:702853186114:elastic-ip/eipalloc-024daf4a5fccf9e25",
            "association_id": "eipassoc-0440711f7cf8b8a66",
            "domain": "vpc",
            "id": "eipalloc-024daf4a5fccf9e25",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cc0f75896b5a3e04",
            "private_dns": "ip-10-0-1-214.ec2.internal",
            "private_ip": "10.0.1.214",
            "public_dns": "ec2-52-3-89-166.compute-1.amazonaws.com",
            "public_ip": "52.3.89.166",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091082b75ed872157",
            "arn": "arn:aws:ec2:us-east-1:702853186114:elastic-ip/eipalloc-091082b75ed872157",
            "association_id": "eipassoc-0fe63821a1a8ce9f7",
            "domain": "vpc",
            "id": "eipalloc-091082b75ed872157",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cde86e6e839864ae",
            "private_dns": "ip-10-0-4-170.ec2.internal",
            "private_ip": "10.0.4.170",
            "public_dns": "ec2-13-223-216-217.compute-1.amazonaws.com",
            "public_ip": "13.223.216.217",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702853186114:internet-gateway/igw-079fa5a55bbbf3952",
            "id": "igw-079fa5a55bbbf3952",
            "owner_id": "702853186114",
            "region": "us-east-1",
            "vpc_id": "vpc-06c5fa8b3c9768876"
          },
          "dependencies": [
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_lb",
      "name": "shared_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "clancy-lb-logs-staging",
                "enabled": true,
                "prefix": "access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:702853186114:loadbalancer/app/lb-staging/8523994a1104c5b7",
            "arn_suffix": "app/lb-staging/8523994a1104c5b7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-staging-1620780934.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:702853186114:loadbalancer/app/lb-staging/8523994a1104c5b7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-staging",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0720c41f1ac488c4d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05a239abe923b3123"
              },
              {
                "subnet_id": "subnet-0ba1c698db13bad33"
              }
            ],
            "subnets": [
              "subnet-05a239abe923b3123",
              "subnet-0ba1c698db13bad33"
            ],
            "vpc_id": "vpc-06c5fa8b3c9768876",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.shared.aws_s3_bucket.lb_logs",
            "module.shared.aws_security_group.shared_sg",
            "module.shared.aws_subnet.subnet_public_2a",
            "module.shared.aws_subnet.subnet_public_2b",
            "module.shared.aws_subnet.subnet_public_2c",
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "shared_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:702853186114:listener/app/lb-staging/8523994a1104c5b7/efe77eface4043bb",
            "certificate_arn": "arn:aws:acm:us-east-1:702853186114:certificate/e16386cb-42ab-489d-a05b-5ab5a193648c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "application/json",
                    "message_body": "[]",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:702853186114:listener/app/lb-staging/8523994a1104c5b7/efe77eface4043bb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:702853186114:loadbalancer/app/lb-staging/8523994a1104c5b7",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.shared.aws_lb.shared_lb",
            "module.shared.aws_s3_bucket.lb_logs",
            "module.shared.aws_security_group.shared_sg",
            "module.shared.aws_subnet.subnet_public_2a",
            "module.shared.aws_subnet.subnet_public_2b",
            "module.shared.aws_subnet.subnet_public_2c",
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024daf4a5fccf9e25",
            "association_id": "eipassoc-0440711f7cf8b8a66",
            "connectivity_type": "public",
            "id": "nat-0ce0834c7fead06a1",
            "network_interface_id": "eni-0cc0f75896b5a3e04",
            "private_ip": "10.0.1.214",
            "public_ip": "52.3.89.166",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ba1c698db13bad33"
          },
          "dependencies": [
            "module.shared.aws_eip.nat_2a",
            "module.shared.aws_internet_gateway.gw",
            "module.shared.aws_subnet.subnet_public_2a",
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091082b75ed872157",
            "association_id": "eipassoc-0fe63821a1a8ce9f7",
            "connectivity_type": "public",
            "id": "nat-056743cf3dccf1688",
            "network_interface_id": "eni-0cde86e6e839864ae",
            "private_ip": "10.0.4.170",
            "public_ip": "13.223.216.217",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05a239abe923b3123"
          },
          "dependencies": [
            "module.shared.aws_eip.nat_2b",
            "module.shared.aws_internet_gateway.gw",
            "module.shared.aws_subnet.subnet_public_2b",
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702853186114:route-table/rtb-0e00483920e3e5064",
            "id": "rtb-0e00483920e3e5064",
            "owner_id": "702853186114",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ce0834c7fead06a1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "clancy-staging-private-route-table-2a"
            },
            "tags_all": {
              "Name": "clancy-staging-private-route-table-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c5fa8b3c9768876"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.shared.aws_eip.nat_2a",
            "module.shared.aws_internet_gateway.gw",
            "module.shared.aws_nat_gateway.nat_2a",
            "module.shared.aws_subnet.subnet_public_2a",
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702853186114:route-table/rtb-0fbbc589bba7b9322",
            "id": "rtb-0fbbc589bba7b9322",
            "owner_id": "702853186114",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-056743cf3dccf1688",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "clancy-staging-private-route-table-2b"
            },
            "tags_all": {
              "Name": "clancy-staging-private-route-table-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c5fa8b3c9768876"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.shared.aws_eip.nat_2b",
            "module.shared.aws_internet_gateway.gw",
            "module.shared.aws_nat_gateway.nat_2b",
            "module.shared.aws_subnet.subnet_public_2b",
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702853186114:route-table/rtb-0da5d57adfad7c150",
            "id": "rtb-0da5d57adfad7c150",
            "owner_id": "702853186114",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079fa5a55bbbf3952",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "clancy-staging-public-route-table"
            },
            "tags_all": {
              "Name": "clancy-staging-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c5fa8b3c9768876"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.shared.aws_internet_gateway.gw",
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc0c240a27edf75c",
            "region": "us-east-1",
            "route_table_id": "rtb-0e00483920e3e5064",
            "subnet_id": "subnet-039fd5720e8b2acfd"
          },
          "dependencies": [
            "module.shared.aws_eip.nat_2a",
            "module.shared.aws_internet_gateway.gw",
            "module.shared.aws_nat_gateway.nat_2a",
            "module.shared.aws_route_table.private_2a",
            "module.shared.aws_subnet.subnet_private_2a",
            "module.shared.aws_subnet.subnet_public_2a",
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088650cba4256425f",
            "region": "us-east-1",
            "route_table_id": "rtb-0fbbc589bba7b9322",
            "subnet_id": "subnet-0f1e678f97eafd931"
          },
          "dependencies": [
            "module.shared.aws_eip.nat_2b",
            "module.shared.aws_internet_gateway.gw",
            "module.shared.aws_nat_gateway.nat_2b",
            "module.shared.aws_route_table.private_2b",
            "module.shared.aws_subnet.subnet_private_2b",
            "module.shared.aws_subnet.subnet_public_2b",
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfe60f18c76464e2",
            "region": "us-east-1",
            "route_table_id": "rtb-0da5d57adfad7c150",
            "subnet_id": "subnet-0ba1c698db13bad33"
          },
          "dependencies": [
            "module.shared.aws_internet_gateway.gw",
            "module.shared.aws_route_table.public",
            "module.shared.aws_subnet.subnet_public_2a",
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a31f5eaea6d61912",
            "region": "us-east-1",
            "route_table_id": "rtb-0da5d57adfad7c150",
            "subnet_id": "subnet-05a239abe923b3123"
          },
          "dependencies": [
            "module.shared.aws_internet_gateway.gw",
            "module.shared.aws_route_table.public",
            "module.shared.aws_subnet.subnet_public_2b",
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shared_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702853186114:security-group/sg-0720c41f1ac488c4d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0720c41f1ac488c4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "shared-sg-staging20250717182008612700000005",
            "name_prefix": "shared-sg-staging",
            "owner_id": "702853186114",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06c5fa8b3c9768876"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "shared_sg_rule_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3193407147",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0720c41f1ac488c4d",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.shared.aws_security_group.shared_sg",
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "shared_sg_rule_external_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3311435830",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0720c41f1ac488c4d",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.shared.aws_security_group.shared_sg",
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "shared_sg_rule_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-858241257",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0720c41f1ac488c4d",
            "security_group_rule_id": "sgr-05f22a3f56d8c5da1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.shared.aws_security_group.shared_sg",
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702853186114:subnet/subnet-039fd5720e8b2acfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039fd5720e8b2acfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "702853186114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "staging-private-subnet-2a"
            },
            "tags_all": {
              "Name": "staging-private-subnet-2a"
            },
            "vpc_id": "vpc-06c5fa8b3c9768876"
          },
          "dependencies": [
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702853186114:subnet/subnet-0f1e678f97eafd931",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1e678f97eafd931",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "702853186114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "staging-private-subnet-2b"
            },
            "tags_all": {
              "Name": "staging-private-subnet-2b"
            },
            "vpc_id": "vpc-06c5fa8b3c9768876"
          },
          "dependencies": [
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702853186114:subnet/subnet-0ba1c698db13bad33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba1c698db13bad33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "702853186114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "staging-public-subnet-2a"
            },
            "tags_all": {
              "Name": "staging-public-subnet-2a"
            },
            "vpc_id": "vpc-06c5fa8b3c9768876"
          },
          "dependencies": [
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702853186114:subnet/subnet-05a239abe923b3123",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a239abe923b3123",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "702853186114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "staging-public-subnet-2b"
            },
            "tags_all": {
              "Name": "staging-public-subnet-2b"
            },
            "vpc_id": "vpc-06c5fa8b3c9768876"
          },
          "dependencies": [
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702853186114:vpc/vpc-06c5fa8b3c9768876",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07d4b955dfc82456a",
            "default_route_table_id": "rtb-06b8b14b496a29dba",
            "default_security_group_id": "sg-0ac7584407589dd95",
            "dhcp_options_id": "dopt-80d7c4e2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c5fa8b3c9768876",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b8b14b496a29dba",
            "owner_id": "702853186114",
            "region": "us-east-1",
            "tags": {
              "Name": "clancy-staging-vpc"
            },
            "tags_all": {
              "Name": "clancy-staging-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702853186114:security-group-rule/sgr-09ab34082d438981a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09ab34082d438981a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0720c41f1ac488c4d",
            "security_group_rule_id": "sgr-09ab34082d438981a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.shared.aws_security_group.shared_sg",
            "module.shared.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}